# app-core

./: Cargo.toml  README.md
.github/workflows/: nix-checks.yml
crates/art/: Cargo.toml
crates/belt/: Cargo.toml
crates/belt/src/: bottleneck.rs  lib.rs
crates/crusty-db/: Cargo.toml
crates/crusty-db/src/: adapter.rs  mock_impl.rs  tests.rs
crates/crusty-db/src/adapter/: errors.rs
crates/crusty-db/src/kv_impl/: mod.rs
crates/db/: Cargo.toml
crates/db/src/: adapter.rs  lib.rs  mock_impl.rs  postgres_impl.rs  tests.rs
crates/db/src/adapter/: errors.rs
crates/db/src/kv_impl/: consumptive.rs  keys.rs  mod.rs
crates/dvf/: Cargo.toml
crates/dvf/src/: creds.rs  email.rs  files.rs  lib.rs  record_id.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/hex/: Cargo.toml
crates/kv/: Cargo.toml
crates/kv-mock-impl/: Cargo.toml
crates/kv-mock-impl/src/: lib.rs
crates/kv-redb-impl/: Cargo.toml
crates/kv-redb-impl/src/: errors.rs  lib.rs
crates/kv-tikv-impl/: Cargo.toml
crates/kv-tikv-impl/src/: lib.rs
crates/kv/src/: key.rs  lib.rs  mock_impl.rs  redb_impl.rs  tikv_impl.rs  value.rs
crates/kv/src/key/: segment.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/names/: Cargo.toml
crates/slugger/: Cargo.toml
crates/slugger/src/: lib.rs
crates/starc/: Cargo.toml
crates/starc/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  local.rs  memory.rs  s3_compat.rs
flake-modules/devshell/: default.nix
flake-modules/rust-builds/: workspace.nix
