
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
# strictly codegen
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }

# errors
# miette = { version = "7", default-features = false, features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", default-features = false, features = [
  "derive",
] }

# mainline application
tokio = { version = "1" }
tokio-util = { version = "0.7" }

# atomic-ish features
bytes = { version = "1" }
ulid = { version = "1.1", features = ["serde"] }
nanorand = { version = "0.7", default-features = false }
futures = { version = "0.3" }
nutype = { version = "0.5" }
pin-project = { version = "1" }

# tracing
tracing = { version = "0.1" }
