[package]
edition = "2021"
name = "art"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
artem = { version = "3", default-features = false }
image = { version = "0.25", features = ["png"], default-features = false }

quote = { version = "1" }
syn = { version = "1", features = ["full"] }

[lib]
proc-macro = true
