[package]
edition = "2021"
name = "crusty-db"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
hex = { path = "../hex" }
kv = { path = "../kv", features = [] }
model = { path = "../model" }

async-trait.workspace = true
generic-tests = "0.1.3"
miette.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
kv = { path = "../kv", features = ["mock"] }
miette = { workspace = true, features = ["fancy"] }
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
ulid = { workspace = true }
