[package]
edition = "2021"
name = "dvf"
publish = false
version = "0.1.0"

[dependencies]
slugger = { path = "../slugger" }

email_address = "0.2"
nutype = { workspace = true, features = ["serde"] }
regex = { version = "1", default-features = false, features = ["std"], optional = true }
serde.workspace = true
ulid.workspace = true

[features]
default = []
reasonable-email = ["dep:regex"]

[package.metadata.cargo-machete]
# `serde` only gets used in `nutype` macros
ignored = ["serde"]

[lints]
workspace = true
