[package]
edition = "2021"
name = "kv"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
slugger = { path = "../slugger" }
starc = { path = "../starc" }

async-trait.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"], optional = true }
tracing.workspace = true

redb = { version = "2.4", optional = true }
tikv-client = { git = "https://github.com/johnbchron/tikv-client-rust", branch = "crunch-deps", optional = true, default-features = false }

rmp-serde = "1.3"
smallvec = "1.13"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []

redb = ["dep:redb"]
tikv = ["dep:tikv-client"]

no-field-names = []
