[package]
edition = "2021"
name = "storage"
publish = false
version = "0.1.0"

[lints]
workspace = true

[dependencies]
belt = { path = "../belt" }
dvf = { path = "../dvf" }
hex = { path = "../hex" }

async-trait.workspace = true
bytes.workspace = true
bytes-stream = "0.0.3"
futures.workspace = true
miette.workspace = true
object_store = { version = "0.12", features = ["aws"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true

[dev-dependencies]
temp-dir = { version = "0.1" }
tokio = { workspace = true, features = ["fs", "rt", "macros", "io-util"] }
